# HaskellGameProject

./: Controller.hs  Main.hs  README.md  gloss-mario.cabal
src/: AnimationLoader.hs  Controller.hs  FileLocations.hs  ImageLoader.hs  Main.hs  Model.hs  Objects.hs  QuadTree.hs  View.hs  WorldLoader.hs
src/Worlds/: 1-1.txt  1-2.txt
