name:                gloss-mario
version:             0.1.0.0
author:              Denny Chen & Joris de Vries
maintainer:          j.t.d.chen@students.uu.nl | (TBA)
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       ghc,
                       containers
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , QuadTree
                     , ImageLoader
  default-language:    Haskell2010