name:                gloss-mario
version:             0.1.0.0
author:              Denny Chen & Joris de Vries
maintainer:          j.t.d.chen@students.uu.nl | (TBA)
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-mario
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       ghc,
                       containers,
                       directory,
                       dir-traverse,
                       split,
                       mtl
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , QuadTree
  default-language:    Haskell2010